--- a/Shopping/Shopping/Views/Countries/EditState.cshtml
+++ b/Shopping/Shopping/Views/Countries/EditState.cshtml
@@ -18,7 +18,7 @@
             <partial name="_State" />
             <div class="form-group mt-2">
                 <input type="submit" value="Guardar" class="btn btn-outline-primary" />
-                <a asp-action="Index" asp-route-id="@Model.CountryId" class="btn btn-outline-success">Regresar</a>
+                <a asp-action="Details" asp-route-id="@Model.CountryId" class="btn btn-outline-success">Regresar</a>
             </div>
         </form>
     </div>
